# DTU-02476-Group-100-Project

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  cloudbuild.yaml  data.dvc  deployment.dockerfile  main.py  predict.dockerfile  project_structure.md  pyproject.toml  requirements.txt  trainer.dockerfile
.dvc/: config
.github/workflows/: python-app.yml
docs/: mkdocs.yaml
docs/source/: index.md
project_winegrape_src_files/: __init__.py  main.py  predict_model.py  results_api.py  train_model.py
project_winegrape_src_files/conf/: config.yaml  config1.yaml  config2.yaml  test_config.yaml
project_winegrape_src_files/data/: data.py  make_dataset.py
project_winegrape_src_files/data/API_image/: results.json
project_winegrape_src_files/models/: model.py
project_winegrape_src_files/tests/: test_config.py  test_data.py
reports/: README.md  report.html
tests/: test_config.py  test_data.py
