[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name"
version = "0.0.1"
description = "Your project description"
authors = [
  { name = "Your Name", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["your_project_name"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ['requirements_dev.txt'] }

[tool.ruff]
line-length = 120

[tool.setuptools_scm]
